--- a/src/stylesGlobal/_variables.css
+++ b/src/stylesGlobal/_variables.css
@@ -3,7 +3,7 @@
   --brand-black: #141414;
   --brand-pink: #ff4092;
   --brand-purple: #7b1173;
-  --brand-violet: #e000cf;
+  --brand-violet: #f072bb;
 
   --brand-grey-darker: #201f1f;
   --brand-grey-dark: #303030;
